Kubernetes/Services/ApacheNifi/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: nifi
  namespace: nifi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nifi
  template:
    metadata:
      labels:
        app: nifi
    spec:
      hostNetwork: true
      dnsPolicy: ClusterFirstWithHostNet
      volumes:
        - name: nifi-ssl-certs
          secret:
            secretName: nifi-tls
      containers:
      - name: nifi-container
        volumeMounts:
          - name: nifi-ssl-certs
            mountPath: /opt/certs
        image: apache/nifi:2.10.0
        ports:
        - containerPort: 8443
          name: https
        - containerPort: 8080
          name: http
        - containerPort: 22
          name: ssh
        resources:
          requests:
            cpu: "100m"
            memory: "64Mi"
          limits:
            cpu: "1"
---
apiVersion: v1
kind: Service
metadata:
  name: nifi-service
  namespace: nifi
spec:
  selector:
    app: nifi
  ports:
  - protocol: TCP
    targetPort: 8443
    port: 8443
    name: ui-tls
  - protocol: TCP
    targetPort: 8080
    port: 8080
    name: ui
  - protocol: TCP
    targetPort: 9088
    port: 9088
    name: node-protocol-port
  - protocol: TCP
    targetPort: 8888
    port: 8888
    name: s2s
  type: LoadBalancer

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: apache-nifi-ingress
  namespace: nifi
  annotations:
    cert-manager.io/cluster-issuer: cloudflare-ca-issuer
    cert-manager.io/common-name: nifi.homelab.kbushby.com
    external-dns.alpha.kubernetes.io/hostname: nifi.homelab.kbushby.com
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  ingressClassName: nginx
  rules:
  - host: nifi.homelab.kbushby.com
    http:
      paths:
      - backend:
          service:
            name: nifi-service
            port:
              number: 8443
              # targetPort: ui
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - nifi.homelab.kbushby.com
    secretName: nifi-tls

# kubectl logs -l app=nifi -n nifi
